<resources>
    <string name="app_name">За чистоту Арзамасского края!</string>
    <string name="title_activity_hub_activity">HubActivityActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">За чистоту Арзамасского края!</string>
    <string name="nav_header_subtitle"><a href="">Мы в Вконтакте</a></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Проекты</string>
    <string name="menu_slideshow">Карта</string>
    <string name="enter_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="register_title">Регистрация</string>
    <string name="et_firstname">Имя</string>
    <string name="et_lastname">Фамилия</string>
    <string name="et_email">Эл. почта</string>
    <string name="et_password">Пароль</string>
    <string name="et_password_sec">Повторите пароль</string>
    <string name="always_use_this_account">Всегда использовать этот аккаунт?</string>
    <string name="resend_verification_email">Повторить отправку</string>
    <string name="enter_title">Вход</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="access_denied">Доступ запрещен</string>
    <string name="get_data_failed">Ошибка при получении данных</string>
    <string name="et_password_empty">Введите Эл. почту</string>
    <string name="empty_edit_text_error">Заполните поле</string>
    <string name="email_reset_password_sended">Проверьте почту для сброса пароля</string>
    <string name="email_reset_password_error">Ошибка</string>
    <string name="error">Ошибка</string>
    <string name="email_verification_email_sended">Проверьте почту для верификации</string>
    <string name="you_not_registred">Вы не зарегистрированы</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="wrong_email">Неверная почта</string>
    <string name="diffrent_password">Пароли не совпадают</string>
    <string name="short_password">Пароль должен содержать не менее 6 символов</string>
    <string name="cancel">Отмена</string>
    <string name="add_locate_mod_disabled">Режим добавления метки выключен</string>
    <string name="add_locate_mod_enabled">Режим добавления метки включен</string>
    <string name="create_new_event">Новая публикация</string>
    <string name="event_title">Название</string>
    <string name="event_message">Описание</string>
    <string name="create_new_locate">Новая метка</string>
    <string name="locate_title">Название</string>
    <string name="locate_message">Описание</string>
    <string name="create_new_project">Новый проект</string>
    <string name="project_title">Название</string>
    <string name="project_message">Описание</string>
    <string name="event_create">Создать</string>
    <string name="project_create">Создать</string>
    <string name="locate_create">Создать</string>
    <string name="message_start_chat">Добро пожаловать в новый чат</string>
    <string name="event_create_success">Мероприятие создано</string>
    <string name="locate_create_success">Метка добавлена</string>
    <string name="profile_refactor">Настройки профиля</string>
    <string name="profile_exit">Выйти</string>
    <string name="refactor">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="event_delete_success">Публикация удалена</string>
    <string name="locate_delete_success">Метка удалена</string>
    <string name="refactor_event">Изменение мероприятия</string>
    <string name="refactor_locate">Изменение метки</string>
    <string name="refactor_project">Изменение проекта</string>
    <string name="menu_my_home">Мои мероприятия</string>
    <string name="my_message_name">Вы</string>
    <string name="create_new_follow">Новая заявка</string>
    <string name="user_settings">Пользователь</string>
    <string name="refactor_image">Изменить изображение</string>
    <string name="refactor_user">Изменение профиля</string>
    <string name="event_refactor">Изменить</string>
    <string name="locate_refactor">Изменить</string>
    <string name="project_refactor">Изменить</string>
    <string name="user_refactor">Изменить</string>
    <string name="event_refactor_success">Мероприятие изменено</string>
    <string name="project_refactor_success">Проект измененг</string>
    <string name="locate_refactor_success">Метка изменена</string>
    <string name="user_refactor_success">Профиль изменен</string>
    <string name="tv_title">Название</string>
    <string name="tv_message">Описание</string>
    <string name="tv_name">Имя</string>
    <string name="tv_firstname">Имя</string>
    <string name="tv_lastname">Фамилия</string>
    <string name="tv_firstname_1">Имя: </string>
    <string name="tv_email_1">Почта: </string>
    <string name="no_users">Нет пользователей</string>
    <string name="no_follows">Нет заявок</string>
    <string name="no_projects">Нет проектов</string>
    <string name="no_events">Нет мероприятий</string>
    <string name="you_not_verified">Вы не верифицированы</string>
    <string name="follow_delete_success">Заявка удалена</string>
    <string name="bt_user_list">Открыть список пользователей</string>
    <string name="remove_follow">Отменить заявку</string>
    <string name="follow_create_success">Заявка создана</string>
    <string name="event">Мероприятие</string>
    <string name="news">Новость</string>
    <string name="news_create_success">Новость создана</string>
    <string name="locate_delete">Удалить</string>
    <string name="no_connection">Проверьте подключение к интернету</string>
    <string name="load_images_success">Загрузка картинок равершена</string>
    <string name="wait_images_load">Дождитесь загрузки картинок</string>
    <string name="try_again">Попробуйте снова</string>
    <string name="message_delete_success">Сообщение удалено</string>
    <string name="read_more"><a href="">Читать дальше</a></string>
    <string name="hide"><a href="">Скрыть</a></string>
    <string name="data_load_error_try_again">Ошибка при загрузке данных\nПопробуйте снова</string>
    <string name="no_locate_address_data">Нет данных об адресе</string>
    <string name="tv_loading">Загрузка</string>
    <string name="loading_data">Загрузка данных...</string>
    <string name="copy_from_history">Переслано от id</string>
    <string name="bt_open_in_vk">Открыть в ВК</string>
</resources>