<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events">

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.finish1m.Presentation.ui.events.EventsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/nav_my_events"
        android:name="com.example.finish1m.Presentation.ui.myEvent.MyEventsFragment"
        android:label="@string/menu_my_home"
        tools:layout="@layout/fragment_my_events" />

    <fragment
        android:id="@+id/nav_projects"
        android:name="com.example.finish1m.Presentation.ui.projects.ProjectsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_projects" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.finish1m.Presentation.ui.map.MapFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_map" />
</navigation>