<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.RegisterActivity"
    android:padding="56dp"
    android:orientation="vertical">

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/layout_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="48sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20sp"
            android:orientation="vertical">
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/et_user_name"
                android:hint="@string/et_firstname" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/tv_name_err"
                android:visibility="gone" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/et_user_family"
                android:hint="@string/et_lastname" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/tv_family_err"
                android:visibility="gone" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/et_email"
                android:hint="@string/et_email" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/tv_email_err"
                android:visibility="gone" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/et_password"
                android:hint="@string/et_password"
                android:inputType="textPassword" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/tv_password_err"
                android:visibility="gone" />
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/et_second_password"
                android:hint="@string/et_password_sec"
                android:inputType="textPassword" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/tv_second_password_err"
                android:visibility="gone" />
            <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/cb_always_use_up"
                android:text="@string/always_use_this_account"
                android:checked="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/bt_register_final"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/register_button"
                android:visibility="gone"/>
            <Button
                android:id="@+id/bt_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/register_button"/>
            <Button
                android:id="@+id/bt_resend_verification_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:text="@string/resend_verification_email"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>