<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.EnterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_title"
            style="@style/text.title.main"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:orientation="vertical">
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/editText.span.main"
                android:id="@+id/et_email"
                android:hint="@string/et_email" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/tv_email_err"
                style="@style/text.warning.main"
                android:visibility="gone"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/et_password"
                style="@style/editText.span.main"
                android:hint="@string/et_password"
                android:inputType="textPassword" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/text.warning.main"
                android:id="@+id/tv_password_err"
                android:visibility="gone" />
            <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                style="@style/text.span.main"
                android:id="@+id/cb_always_use"
                android:text="@string/always_use_this_account"
                android:checked="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:padding="4dp">
            <Button
                android:id="@+id/bt_enter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enter_button"
                style="@style/button.default"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/bt_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/button.default"
                android:text="@string/reset_password"/>
        </LinearLayout>

    </LinearLayout>




</FrameLayout>