<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.CreateNewEventActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        style="@style/toolbar.default">

        <ImageButton
            android:id="@+id/bt_close"
            style="@style/button.toolbar.default"
            android:src="@drawable/ic_close"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text.title.second"
            android:text="@string/refactor_user"
            android:layout_gravity="start"
            android:textAlignment="textStart"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:overScrollMode="ifContentScrolls"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                style="@style/toolbar.default"
                android:layout_width="match_parent"
                android:layout_margin="0dp"
                android:background="?recyclerView_default_background"
                android:elevation="0dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_elevation"
                style="@style/toolbar.default"
                android:layout_margin="0dp"
                android:elevation="0dp"
                android:background="?recyclerView_default_background"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editText.span.main"
                    android:hint="@string/et_firstname"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/text.warning.main"
                    android:id="@+id/tv_title_err"
                    android:visibility="gone" />
                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editText.span.main"
                    android:hint="@string/et_lastname"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/text.warning.main"
                    android:id="@+id/tv_message_err"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/bt_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/button.default"
                    android:text="@string/event_create"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</FrameLayout>